<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".promotiondetails.view.PromotionDetailsActivity"
        android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStart="0dp"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detailsTitleTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Verdemar"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/detailsImageIV"
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="20dp"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toBottomOf="@id/detailsTitleTV"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/verdemar_w"
            />

            <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintTop_toBottomOf="@id/detailsTitleTV"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/detailsImageIV"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/rounded_purple_shape"
                    android:orientation="vertical"
                    android:padding="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/globalPromotionValueTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="30%"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/money_back"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@id/detailsToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/goToStoreBT"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activate_promotion"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_red_shape"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cuponsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/goToStoreBT"
            android:background="@drawable/purple_text_view"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cupons"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:padding="6dp"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/promotionDescriptionsRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cuponsET"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>